--- a/EverywhereHouseController/res/layout/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout/management_menu_view.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content" >
 
                 <TableLayout
-                    android:id="@+id/table2"
+                    android:id="@+id/genericTable2"
                     android:layout_width="wrap_content"
                     android:layout_height="400dp"
                     android:layout_alignParentBottom="true"
