--- a/EverywhereHouseController/res/layout-xlarge/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout-xlarge/management_menu_view.xml
@@ -51,7 +51,7 @@
                 android:layout_height="552dp" >
 
                 <TableLayout
-                    android:id="@+id/genericTable2"
+                    android:id="@+id/table2"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_alignParentBottom="true"
