--- a/EverywhereHouseController/res/layout/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout/management_menu_view.xml
@@ -66,7 +66,8 @@
                     <TableRow
                         android:id="@+id/tableRow1"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_height="wrap_content"
+                        android:visibility="visible" >
 
                         <Button
                             android:id="@+id/genericButton"
