--- a/EverywhereHouseController/res/layout-large/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout-large/management_menu_view.xml
@@ -21,19 +21,10 @@
                 android:layout_height="wrap_content" >
 
                 <ImageView
-                    android:id="@+id/imageWorldManagementMenu"
+                    android:id="@+id/HouseIconManagementMenu"
                     android:layout_width="match_parent"
                     android:layout_height="160dp"
-                    android:src="@drawable/world_ehc" />
-
-                <ImageView
-                    android:id="@+id/imageWordManagementMenu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="170dp"
-                    android:layout_alignLeft="@+id/imageWorldManagementMenu"
-                    android:layout_alignParentRight="true"
-                    android:layout_weight="0.12"
-                    android:src="@drawable/word_ehc" />
+                    android:src="@drawable/house_icon" />
 
             </RelativeLayout>
 
