--- a/EverywhereHouseController/res/layout-large/log_in_view.xml
+++ b/EverywhereHouseController/res/layout-large/log_in_view.xml
@@ -14,7 +14,7 @@
     tools:context=".LogIn" >
 
      <ImageView
-         android:id="@+id/imageWorldManagementMenu"
+         android:id="@+id/HouseIconManagementMenu"
          android:layout_width="fill_parent"
          android:layout_height="230dp"
          android:layout_alignParentTop="true"
@@ -30,6 +30,8 @@
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="77dp"
          android:onClick="onClickButton"
+         android:textColor="@drawable/button_text_color"
+         android:background="@drawable/button_config"
          android:text="Login"
          android:textSize="30sp" />
 
@@ -56,8 +58,8 @@
          android:id="@+id/imageWordEHC"
          android:layout_width="fill_parent"
          android:layout_height="240dp"
-         android:layout_alignBottom="@+id/imageWorldManagementMenu"
-         android:layout_alignTop="@+id/imageWorldManagementMenu"
+         android:layout_alignBottom="@+id/HouseIconManagementMenu"
+         android:layout_alignTop="@+id/HouseIconManagementMenu"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="5dp"
          android:src="@drawable/word_ehc" />
