--- a/EverywhereHouseController/res/layout-xlarge/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout-xlarge/main_menu_view.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content" >
 
             <ImageView
-                android:id="@+id/House_icon_main_menu"
+                android:id="@+id/world"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginTop="60dp"
