--- a/EverywhereHouseController/res/layout/items_view.xml
+++ b/EverywhereHouseController/res/layout/items_view.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+     <ExpandableListView
+        android:id="@+id/itemlist"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent" >
+    </ExpandableListView>
 
     
 
