--- a/EverywhereHouseController/res/layout-large/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout-large/main_menu_view.xml
@@ -44,53 +44,52 @@
 
             <Button
                 android:id="@+id/buttonProfile"
-                android:layout_width="170dp"
-                android:layout_height="120dp"
+                android:layout_width="180dp"
+                android:layout_height="100dp"
                 android:layout_alignLeft="@+id/buttonWorks"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="97dp"
+                android:background="@drawable/button_config"
+                android:text="Profile"
                 android:textColor="@drawable/button_text_color"
-         		android:background="@drawable/button_config"
-                android:text="Perfil"
-                android:textSize="40sp" />
-
-            <Button
-                android:id="@+id/buttonWorks"
-                android:layout_width="170dp"
-                android:layout_height="120dp"
-                android:layout_alignBaseline="@+id/buttonManagement"
-                android:layout_alignBottom="@+id/buttonManagement"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="28dp"
-                android:textColor="@drawable/button_text_color"
-         		android:background="@drawable/button_config"
-                android:text="Tareas"
-                android:textSize="40sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/buttonConfig"
-                android:layout_width="170dp"
-                android:layout_height="120dp"
+                android:layout_width="180dp"
+                android:layout_height="100dp"
                 android:layout_alignBaseline="@+id/buttonProfile"
                 android:layout_alignBottom="@+id/buttonProfile"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="30dp"
+                android:background="@drawable/button_config"
+                android:text="Configuration"
                 android:textColor="@drawable/button_text_color"
-         		android:background="@drawable/button_config"
-                android:text="Config."
-                android:textSize="40sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/buttonManagement"
-                android:layout_width="170dp"
-                android:layout_height="120dp"
+                android:layout_width="180dp"
+                android:layout_height="100dp"
                 android:layout_above="@+id/buttonConfig"
                 android:layout_alignLeft="@+id/buttonConfig"
-                android:layout_marginBottom="25dp"
-                android:text="Gestión"
-         		android:textColor="@drawable/button_text_color"
-         		android:background="@drawable/button_config"
-                android:textSize="40sp" />
+                android:layout_marginBottom="37dp"
+                android:background="@drawable/button_config"
+                android:text="Management"
+                android:textColor="@drawable/button_text_color"
+                android:textSize="25sp" />
+
+            <Button
+                android:id="@+id/buttonWorks"
+                android:layout_width="180dp"
+                android:layout_height="100dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/buttonManagement"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/button_config"
+                android:text="Tasks"
+                android:textColor="@drawable/button_text_color"
+                android:textSize="25sp" />
 
         </RelativeLayout>
 
