--- a/EverywhereHouseController/res/layout-sw600dp/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout-sw600dp/management_menu_view.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_marginBottom="0dp"
+    android:layout_marginLeft="0dp"
+    android:layout_marginRight="0dp"
+    android:layout_marginTop="0dp"
     android:background="@android:color/white"
     android:gravity="top|bottom|left|right|center"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,62 +16,77 @@
     tools:context=".ManagementMenu" >
     	    	
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical" >
 
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
 
                 <ImageView
                     android:id="@+id/HouseIconManagementMenu"
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:src="@drawable/house_icon" />
+                    android:layout_height="160dp"
+                    android:layout_marginBottom="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/world_ehc" />
+
+                <ImageView
+                    android:id="@+id/imageWordManagementMenu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="170dp"
+                    android:layout_alignLeft="@+id/HouseIconManagementMenu"
+                    android:layout_alignParentRight="true"
+                    android:layout_weight="0.12"
+                    android:src="@drawable/word_ehc" />
 
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/RelativeContentTables"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_width="match_parent"
+                android:layout_height="552dp" >
 
                 <TableLayout
                     android:id="@+id/table2"
                     android:layout_width="wrap_content"
-                    android:layout_height="400dp"
+                    android:layout_height="0dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginRight="40dp" >
+                    android:layout_marginRight="60dp"
+                    android:layout_marginTop="30dp" >
 
                 </TableLayout>
 
                 <TableLayout
                     android:id="@+id/table1"
                     android:layout_width="wrap_content"
-                    android:layout_height="400dp"
+                    android:layout_height="0dp"
                     android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginTop="30dp"
                     android:layout_weight="0.12" >
 
                     <TableRow
                         android:id="@+id/tableRow1"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="visible" >
+                        android:layout_height="wrap_content" >
 
                         <Button
                             android:id="@+id/genericButton"
-                            android:layout_width="130dp"
-                            android:layout_height="80dp"
+                            android:layout_width="160dp"
+                            android:layout_height="100dp"
                             android:layout_marginBottom="10dp"
-                            android:height="70dp"
+                            android:height="100dp"
                             android:text="Habitación"
-                            android:width="100dp" />
+                            android:textSize="20sp"
+                            android:width="160dp" />
+
                     </TableRow>
                 </TableLayout>
 
