--- a/EverywhereHouseController/res/layout-sw720dp-land/log_in_view.xml
+++ b/EverywhereHouseController/res/layout-sw720dp-land/log_in_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:screenSize = "large"
+    android:screenSize = "xlarge"
     android:screenDensity = "hdpi"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,88 +16,72 @@
      <ImageView
          android:id="@+id/HouseIconManagementMenu"
          android:layout_width="fill_parent"
-         android:layout_height="200dp"
+         android:layout_height="400dp"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
-         android:layout_marginTop="60dp"
+         android:layout_marginTop="48dp"
          android:src="@drawable/world_ehc" />
 
      <Button
          android:id="@+id/buttonLogin"
-         android:layout_width="100dp"
-         android:layout_height="60dp"
+         android:layout_width="200dp"
+         android:layout_height="80dp"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="77dp"
-         android:onClick="onClickButton"
+         android:onClick="onClickButton" 
          android:textColor="@drawable/button_text_color"
          android:background="@drawable/button_config"
          android:text="Login"
-         android:textSize="30sp" />
+         android:textSize="50sp" />
 
      <EditText
          android:id="@+id/passwordText"
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
+         android:layout_width="400dp"
+         android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/password"
          android:layout_alignLeft="@+id/buttonLogin"
-         android:background="@color/LightGrey"
          android:ems="10"
          android:inputType="textPassword"
          android:lines="1" />
 
-     <EditText
-         android:id="@+id/idText"
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:layout_alignLeft="@+id/buttonLogin"
-         android:layout_alignTop="@+id/id"
-         android:background="@color/LightGrey"
-         android:ems="10"
-         android:lines="1" />
-
      <ImageView
          android:id="@+id/imageWordEHC"
-         android:layout_width="fill_parent"
-         android:layout_height="200dp"
+         android:layout_width="400dp"
+         android:layout_height="500dp"
          android:layout_alignBottom="@+id/HouseIconManagementMenu"
          android:layout_alignTop="@+id/HouseIconManagementMenu"
          android:layout_centerHorizontal="true"
-         android:layout_marginTop="5dp"
          android:src="@drawable/word_ehc" />
 
-     <TextView
-         android:id="@+id/password"
-         android:layout_width="wrap_content"
+     <EditText
+         android:id="@+id/idText"
+         android:layout_width="400dp"
          android:layout_height="wrap_content"
-         android:layout_above="@+id/buttonLogin"
-         android:layout_marginBottom="54dp"
-         android:text="Password "
-         android:textColor="@color/Black"
-         android:textSize="30sp" />
+         android:layout_alignLeft="@+id/passwordText"
+         android:layout_below="@+id/HouseIconManagementMenu"
+         android:layout_marginTop="144dp"
+         android:ems="10"
+         android:lines="1" />
 
      <TextView
          android:id="@+id/id"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:layout_above="@+id/passwordText"
-         android:layout_alignLeft="@+id/password"
-         android:layout_marginBottom="66dp"
+         android:layout_alignBottom="@+id/idText"
+         android:layout_alignLeft="@+id/HouseIconManagementMenu"
+         android:layout_marginLeft="28dp"
          android:text="User"
-         android:textColor="@color/Black"
-         android:textSize="30sp" />
+         android:textSize="50sp" />
 
-    <TextView
-        android:id="@+id/createUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="57dp"
-        android:clickable="true"
-        android:onClick="createUser"
-        android:text="Create user"
-        android:textColor="@color/Blue"
-        android:textColorHint="@color/Blue" />
+     <TextView
+         android:id="@+id/password"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignLeft="@+id/id"
+         android:layout_below="@+id/id"
+         android:layout_marginTop="125dp"
+         android:text="Password "
+         android:textSize="50sp" />
 
 </RelativeLayout>
