--- a/EverywhereHouseController/res/layout/log_in_view.xml
+++ b/EverywhereHouseController/res/layout/log_in_view.xml
@@ -34,6 +34,7 @@
         android:layout_alignLeft="@+id/buttonLogin"
         android:layout_alignRight="@+id/HouseIconManagementMenu"
         android:layout_marginBottom="31dp"
+        android:background="@color/LightGrey"
         android:ems="10"
         android:inputType="textPassword"
         android:lines="1" />
@@ -45,7 +46,7 @@
         android:layout_alignTop="@+id/passwordText"
         android:layout_toLeftOf="@+id/passwordText"
         android:text="Password "
-        android:textColor="@color/DarkGreen"
+        android:textColor="@color/Black"
         android:textSize="20sp" />
 
     <TextView
@@ -56,7 +57,7 @@
         android:layout_alignLeft="@+id/password"
         android:layout_marginBottom="45dp"
         android:text="User"
-        android:textColor="@color/DarkGreen"
+        android:textColor="@color/Black"
         android:textSize="20sp" />
 
     <EditText
@@ -66,6 +67,7 @@
         android:layout_alignRight="@+id/HouseIconManagementMenu"
         android:layout_alignTop="@+id/id"
         android:layout_toRightOf="@+id/password"
+        android:background="@color/LightGrey"
         android:ems="10"
         android:lines="1" />
 
@@ -85,5 +87,16 @@
         android:layout_alignTop="@+id/HouseIconManagementMenu"
         android:layout_centerHorizontal="true"
         android:src="@drawable/word_ehc" />
+
+    <TextView
+        android:id="@+id/createUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="26dp"
+        android:text="Create user"
+        android:textColor="@color/Blue"
+        android:textColorHint="@color/Blue" />
 
 </RelativeLayout>
