--- a/EverywhereHouseController/res/layout/group_item.xml
+++ b/EverywhereHouseController/res/layout/group_item.xml
@@ -8,7 +8,10 @@
         android:id="@+id/groupname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="25dp"/>
-    
+        android:typeface="monospace"
+        android:textSize="12pt"
+        android:paddingLeft="30dp"
+		android:textColor="#669900"
+        />
 
 </LinearLayout>
