--- a/EverywhereHouseController/res/layout/create_user.xml
+++ b/EverywhereHouseController/res/layout/create_user.xml
@@ -24,17 +24,6 @@
     </EditText>
 
     <TextView
-        android:id="@+id/textMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="131dp"
-        android:layout_marginTop="138dp"
-        android:text="User"
-        android:textSize="25sp" />
-
-    <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,31 +31,19 @@
         android:layout_marginTop="67dp"
         android:layout_toLeftOf="@+id/newUser"
         android:text="E-mail"
-        android:textSize="25sp" />
-
-    <Button
-        android:id="@+id/newUserConfirm"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:layout_alignLeft="@+id/textMessage"
-        android:layout_below="@+id/textView4"
-        android:layout_marginTop="88dp"
-        android:background="@drawable/button_config"
-        android:text="Confirm"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/newUserCancel"
         android:layout_width="100dp"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:layout_alignRight="@+id/newRepeatPassword"
         android:layout_alignTop="@+id/newUserConfirm"
         android:layout_marginRight="50dp"
         android:background="@drawable/button_config"
         android:text="Exit"
         android:textColor="@drawable/button_text_color"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/newPassword"
@@ -85,7 +62,7 @@
         android:layout_marginTop="53dp"
         android:layout_toLeftOf="@+id/newUser"
         android:text="Password"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -95,7 +72,7 @@
         android:layout_marginTop="27dp"
         android:layout_toLeftOf="@+id/newUser"
         android:text="Repeat \nPassword"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/newRepeatPassword"
@@ -105,5 +82,28 @@
         android:layout_alignLeft="@+id/newPassword"
         android:ems="10"
         android:inputType="textPassword" />
+
+    <TextView
+        android:id="@+id/textMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="66dp"
+        android:layout_marginTop="86dp"
+        android:text="User"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/newUserConfirm"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/textView4"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/button_config"
+        android:text="Confirm"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="20sp" />
 
 </RelativeLayout>
