--- a/EverywhereHouseController/res/values/styles.xml
+++ b/EverywhereHouseController/res/values/styles.xml
@@ -16,5 +16,15 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="ItemStyle">
+      <item name="android:layout_width">fill_parent</item>
+      <item name="android:layout_height">wrap_content</item>
+      <item name="android:capitalize">characters</item>
+      <item name="android:typeface">monospace</item>
+      <item name="android:textSize">12pt</item>
+      <item name="android:paddingLeft">30dp</item>
+      <item name="android:textColor">#669900</item>/> 
+   </style>
 
 </resources>
