--- a/EverywhereHouseController/res/layout/boolean_item.xml
+++ b/EverywhereHouseController/res/layout/boolean_item.xml
@@ -6,17 +6,10 @@
     
     <TextView 
         android:id="@+id/childname"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <SeekBar 
-        android:id="@+id/float_value" 
-        android:layout_width="match_parent" 
-        android:layout_height="wrap_content" 
-        android:layout_gravity="center_horizontal"
-        android:visibility="invisible">
-    </SeekBar>
-    
     <ToggleButton 
 	    android:id="@+id/boolean_value"
 	    android:layout_width="wrap_content"
@@ -24,9 +17,8 @@
 	    android:layout_gravity="center_horizontal"
 	    android:textOn="On!"
 	    android:textOff="Off!"
-	    android:onClick="onToggleClicked"
-	    android:visibility="invisible">
+	    android:onClick="onToggleClicked">
     </ToggleButton>
-    
+
 
 </LinearLayout>
