--- a/EverywhereHouseController/res/layout-large/log_in_view.xml
+++ b/EverywhereHouseController/res/layout-large/log_in_view.xml
@@ -44,7 +44,9 @@
          android:background="@color/LightGrey"
          android:ems="10"
          android:inputType="textPassword"
-         android:lines="1" />
+         android:lines="1"
+         android:password="true"
+         android:singleLine="true" />
 
      <EditText
          android:id="@+id/idText"
@@ -54,7 +56,8 @@
          android:layout_alignTop="@+id/id"
          android:background="@color/LightGrey"
          android:ems="10"
-         android:lines="1" />
+         android:lines="1"
+         android:singleLine="true" />
 
      <ImageView
          android:id="@+id/imageWordEHC"
