--- a/EverywhereHouseController/res/layout/create_user.xml
+++ b/EverywhereHouseController/res/layout/create_user.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView3"
         android:layout_alignLeft="@+id/newUser"
-        android:ems="10" />
+        android:ems="10"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/newUser"
@@ -18,7 +19,8 @@
         android:layout_alignBottom="@+id/textMessage"
         android:layout_marginLeft="36dp"
         android:layout_toRightOf="@+id/textMessage"
-        android:ems="10" >
+        android:ems="10"
+        android:singleLine="true" >
 
         <requestFocus />
     </EditText>
@@ -52,7 +54,9 @@
         android:layout_alignBottom="@+id/textView3"
         android:layout_alignLeft="@+id/newEmail"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:password="true"
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/textView3"
@@ -81,7 +85,9 @@
         android:layout_alignBottom="@+id/textView4"
         android:layout_alignLeft="@+id/newPassword"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:password="true"
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/textMessage"
