[ADDED] Basic functionality: Make actions in the house resources.

--- a/EverywhereHouseController/res/layout/items_view.xml
+++ b/EverywhereHouseController/res/layout/items_view.xml
@@ -4,6 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp" >
+
+        <TextView
+            android:id="@+id/textRoom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="TextView"
+            android:textSize="30sp" />
+
+    </RelativeLayout>
     
      <ExpandableListView
         android:id="@+id/itemlist"
