--- a/EverywhereHouseController/res/layout-large/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout-large/management_menu_view.xml
@@ -57,18 +57,16 @@
 
                     <TableRow
                         android:id="@+id/tableRow1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_width="120dp"
+                        android:layout_height="90dp" >
 
                         <Button
                             android:id="@+id/genericButton"
-                            android:layout_width="160dp"
-                            android:layout_height="100dp"
+                            android:layout_width="120dp"
+                            android:layout_height="90dp"
                             android:layout_marginBottom="10dp"
-                            android:height="100dp"
                             android:text="Habitación"
-                            android:textSize="20sp"
-                            android:width="160dp" />
+                            android:textSize="20sp" />
 
                     </TableRow>
                 </TableLayout>
