--- a/EverywhereHouseController/res/layout/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout/management_menu_view.xml
@@ -56,8 +56,8 @@
 
                     <TableRow
                         android:id="@+id/tableRow1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="110dp"
+                        android:layout_height="70dp"
                         android:visibility="visible" >
 
                         <Button
@@ -65,9 +65,11 @@
                             android:layout_width="110dp"
                             android:layout_height="70dp"
                             android:layout_marginBottom="10dp"
-                            android:height="70dp"
+                            android:background="@drawable/button_config"
                             android:text="Habitación"
-                            android:width="90dp" />
+                            android:textColor="@drawable/button_text_color"
+                            android:textSize="25sp" />
+
                     </TableRow>
                 </TableLayout>
 
